--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 	<h1>Grzegorz Zapała</h1>
-	<h4>software destroyer</h4>
+	<h4>Software & hardware destroyer</h4>
 	<img src="Lucio.jpg">
 	</body>
 </html>
