--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 	<head>
-	<link rel="stylesheet" href="Cascade_Style_Sheets_File.css">
+		<title></title>
+		<link rel="stylesheet" href="Cascade_Style_Sheets_File.css">
 	</head>
 	<body>
-	<h1>Grzegorz Zapała</h1>
-	<h4>Software & hardware destroyer</h4>
-	<img src="Lucio.jpg">
+		<h1>Grzegorz Zapała</h1>
+		<h4>Software & hardware destroyer</h4>
+		<img src="Lucio.jpg">
 	</body>
 </html>
