--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>title</title>
+		<title>GSambor</title>
 		<link rel="stylesheet" href="Cascade_Style_Sheets_File.css">
 	</head>
 	<body>
