--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="Cascade_Style_Sheets_File.css">
 	</head>
 	<body>
-		<h1>Grzegorz Zapała</h1>
+		<h1>Grzegorz Z.</h1>
 		<h4>Software & hardware destroyer</h4>
 		<img src="Lucio.jpg">
 	</body>
