--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE HTML>
+<html lang="pl">
 	<head>
 		<title>GSambor</title>
 		<link rel="stylesheet" href="Cascade_Style_Sheets_File.css">
@@ -6,6 +7,7 @@
 	<body>
 		<h1>Grzegorz Z.</h1>
 		<h4>Software & hardware destroyer</h4>
-		<img src="Lucio.jpg">
+		<img src="Overwatch-Summer-Games-2017-skins-Blizzard-secrets-839062.jpg">
+		<img src="beach_soldier_skin_by_marumun-da8nlpo.png">
 	</body>
 </html>
