--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<h1>Grzegorz Z.</h1>
 		<h4>Software & hardware destroyer</h4>
-		<div>his weapon is terrible</div>
+		<div>his weapon is terrible:</div>
 		<img src="Overwatch-Summer-Games-2017-skins-Blizzard-secrets-839062.jpg">
 		<div>McCree</div>
 	</body>
