--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 		<h4>Software & hardware destroyer</h4>
 		<div>his weapon is terrible:</div>
 		<img src="Overwatch-Summer-Games-2017-skins-Blizzard-secrets-839062.jpg">
-		<div>McCree</div>
+		<div>McCree's trousers</div>
 	</body>
 </html>
