--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 	<body>
 		<h1>Grzegorz Z.</h1>
 		<h4>Software & hardware destroyer</h4>
+		<a herf="http://onegrx.github.io/">mine master</a>
 	</body>
 </html>
