--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="pl">
 	<head>
+		<title>hyper links</title>
 		<title>GSambor</title>
 		<link rel="stylesheet" href="Cascade_Style_Sheets_File.css">
 	</head>
