--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<body>
 		<h1>Grzegorz Z.</h1>
 		<h4>Software & hardware destroyer</h4>
-		<a href="onegrx.github.io">mine master</a>
+		<a href="http://onegrx.github.io/">mine master</a>
 	</body>
 </html>
