--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 		<h1>Grzegorz Z.</h1>
 		<h4>Software & hardware destroyer</h4>
 		<a href="http://onegrx.github.io/">mine master</a>
+		<br>
+		<a  href="dla bartka.html">TYLKO dla Bartka Sz.</a>
 	</body>
 </html>
