--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 		<h4>Software & hardware destroyer</h4>
 		<a href="http://onegrx.github.io/">mine master</a>
 		<br>
-		<a  href="dla bartka.html">TYLKO dla Bartka Sz.</a>
+		<link="dla bartka.html">TYLKO dla Bartka Sz.<>
 	</body>
 </html>
