--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 		<h4>Software & hardware destroyer</h4>
 		<a href="http://onegrx.github.io/">mine master</a>
 		<br>
-		<link rel="dla bartka.html">TYLKO dla Bartka Sz.<>
+		<a href="dla bartka.github.io">TYLKO dla Bartka</a>
 	</body>
 </html>
