--- a/dla bartka.html
+++ b/dla bartka.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="pl"
 	<head>
-	
+	<link rel="stylesheet" href="css.css">
 	</head>
 	<body>
 	<div>Czy moglbys, przosze, przeslac mi, jak wszystko wysrodkowac?
