--- a/dla bartka.html
+++ b/dla bartka.html
@@ -4,6 +4,6 @@
 	<link rel="stylesheet" href="css.css">
 	</head>
 	<body>
-	<div>Czy moglbys, przosze, przeslac mi, jak wszystko wysrodkowac?
+		<div>Czy moglbys, przosze, przeslac mi, jak wszystko wysrodkowac?</div>
 	</body>
 <html/>
