--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="Cascade_Style_Sheets_File.css">
 	</head>
 	<body>
+		<center>
 		<h1>Grzegorz Z.</h1>
 		<h4>Software & hardware destroyer</h4>
 		<a href="http://onegrx.github.io/">mine master</a>
@@ -12,5 +13,6 @@
 		<br>
 		<br>
 		<a href="dla bartka.html">dla Bartka Sz.</a>
+		</center>
 	</body>
 </html>
