--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<h1>Grzegorz Z.</h1>
 		<h4>Software & hardware destroyer</h4>
 		<a href="http://onegrx.github.io/">mine master</a>
+		<i class="fa fa-github-square fa-2x"></i>
 		</center>
 	</body>
 </html>
