--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
 	</head>
 	<body>
 		<center>
-		<h1>Grzegorz Z.</h1>
-		<h4>Software & hardware destroyer</h4>
-		<a href="http://onegrx.github.io/">mine master</a>
-		<i class="fa fa-github-square fa-2x"></i>
+			<h1>Grzegorz Z.</h1>
+			<h4>Software & hardware destroyer</h4>
+			<a href="http://onegrx.github.io/">mine master</a>
+			<nav>
+				<ul>
+					<li>
+						<a href="https://github.com/GSambor"
+							<i class="fa fa-github-square fa-2x"></i>
+						</a>
+					</li>
+				</ul>
+			</nav>
 		</center>
 	</body>
 </html>
