Use border radius on image

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 		<link rel="stylesheet" href="Cascade_Style_Sheets_File.css">
 	</head>
 	<body>
-		<center>
+		<div class="container">
 			<h1>Grzegorz Z.</h1>
 			<h4>Software & hardware destroyer</h4>
 			<a href="http://onegrx.github.io/">mine master</a>
-		</center>
+			<div class="circular">
+				<img src="beach_soldier_skin_by_marumun-da8nlpo.png" alt="obrazek">
+			</div>
+		</div>
 	</body>
 </html>
